--- a/index.html
+++ b/index.html
@@ -15,6 +15,19 @@
   </head>
   <body>
     <div class="container">
+
+      <div class="row jumbotron">
+        <hr class="my-4">
+        <h1> Valeria Fornes </h1>
+      </div>
+      <div class="row">
+        <h1 id="about-text" class="col-md-6"> About: </h1>
+        Hello people of the internet. My name is Valeria also known as Val. I was born in East Oakland (Aka land of the side shows) on July 24th, 2002. I go to Oakland Unity High School 
+      </div>
+
+
+
+
     </div>
 
 
